build: возвращение к модульной системе, конфигурация под генерацию exe